<resources>
    <string name="app_name">Open Market</string>
    <string name="title_activity_accueil">O Market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">425428758001662</string>
    <string name="fb_login_protocol_scheme">fb425428758001662</string>
    <string name="title_activity_scrolling_one">ScrollingActivityOne</string>
    <string name="slider_description">image de fond pour le slider d\'accueil</string>
    <string name="tost_erreur_de_connexion">Veillez Activer votre connexion internet,vous ne pouvez pas utiliser Open market sans connexion internet</string>
    <string name="title_activity_maps">Map</string>
    <string name="string">Map</string>
    <string name="title_activity_scrolling_detail_one">ScrollingActivityDetailOne</string>
    <string name="description_titre_slider1">Grace a Open Market , vendez gratuitement et facilement vos produits partout au cameroun.</string>
    <string name="titre_slider1">Vendez vos vetements sans stress .</string>
    <string name="titre_slider2">Faites connaitre votre boutique .</string>
    <string name="slider_description_slider2">L\'application dispose d\'enplacement cible pour vous pemettre de vous mettre en valeur et de faire connaitre vos articles.</string>
    <string name="titre_slider3">contacter,negocier avec d\'autres et faites de bonne affaire .</string>
    <string name="description_slider3">Inscrivez vous et decouvrer des d\'articles de qualités vendu par d\'autres utilisateur de la plateforme , negocier directement avec eux  et faite de bonne affaire sans payer de frais.</string>
    <string name="apropos_grand_titre">Besoin de mettre vos produits en avant sur votre application prefere ?</string>
    <string name="a_propos_sous_titre">Contacter nous via appel ou whatsapp . Cliquez ici bas.</string>
    <string name="a_propos_button">contacter nous.</string>
    <string name="string_choice_email">se connecter via email</string>
    <string name="choice_enregistrer">s\'enregistrer</string>
    <string name="cursor_next">suivant</string>
    <string name="passer">passer</string>
    <string name="detail_supprimer">supprimer</string>
    <string name="detail_contacter">contacter le vendeur</string>
    <string name="login_edittext_email">votre email</string>
    <string name="login_password">mot de passe</string>
    <string name="login_button_connexion">connexion</string>
    <string name="login_enregister_button">m\'inscrire</string>
    <string name="login_text_other_connexion">vous n\'avez pas de compte ?</string>
    <string name="message_activity_send_editext">entrer votre message ici</string>
    <string name="parametre_edit_nom">nom</string>
    <string name="parametre_prenom">prenom</string>
    <string name="parametre_residence">residence(exple:Douala/akwa.../16 caracteres)</string>
    <string name="parametre_decription">D\'ecris toi en quelque mots (250 caractere)</string>
    <string name="parametre_button">enregistrer</string>
    <string name="produc_name">nom du produit (35 caractere max)</string>
    <string name="post_description">description (400 caractere max)</string>
    <string name="post_prix">prix ( la valeur est le fcfa )</string>
    <string name="post_info_sur_vente">info sur votre vente</string>
    <string name="profil_voir_article">voir vos articles</string>
    <string name="profil_reside">reside a</string>
    <string name="register_login">votre email</string>
    <string name="register_password">mot de passe</string>
    <string name="register_confirm_password">confirmation du mot de passe</string>
    <string name="register_button_connect">confirmation du mot de passe</string>
    <string name="register_other_connect_button">me connecter</string>
    <string name="register_text">j\'ai deja un compte</string>
    <string name="search_activity_text">Touche ici ...</string>
    <string name="user_general_reside">reside a</string>
    <string name="user_general_derniere_connexion">Derniere activite</string>
    <string name="item_general">prix :</string>
    <string name="nom_de_categorie">nom de categorie</string>
    <string name="publicite">publicite</string>
    <string name="erreur_slider">erreur lors du chargement du slider</string>
    <string name="login_heureux_de_vous_revoir">heureux de vous revoir ...</string>
    <string name="renplir_tous">renplir tous les chanps</string>
    <string name="bienvenu">Bienvenue</string>
    <string name="erreur_de_mot_de_passe">les mots de passe ne correspondent pas !!!</string>
    <string name="message_vide">vous ne pouvez pas envoyer un message vide</string>
    <string name="vente_retire">cet article a été rétiré de la vente</string>
    <string name="voulez_vous_supprimer">voulez vous vraiment supprimer ?</string>
    <string name="supprimer_desnvx">supprime des nouveaux</string>
    <string name="supprimmer_des">supprime ?</string>
    <string name="choix_de_categorie">choix de categories</string>
    <string name="post_remplisser_les_info">remplissez les information a propos de votre vente</string>
    <string name="essai_after">un probleme est survenue,reessayer plus tard svp</string>
    <string name="see_video">regardez la video (5 secondes min) pour soutenir l\'appli</string>
    <string name="video_seen_thank">merci d\'avoir regarder la publicite , vous pouvez la fermer maintenant .</string>
    <string name="wait">patienter</string>
    <string name="voir_vente_de">voir les ventes de</string>
    <string name="ecrire_a">ecrire a </string>
    <string name="param_compte_enregister">compte enregistre </string>
    <string name="article_en_vente">articles en ventes</string>
    <string name="no_article">aucun article en vente</string>
    <string name="glisser">glisser de la droite vers la gauche</string>
    <string name="commencer">commencer</string>
    <string name="soutenir">merci de cliquer sur la pub pour soutemir l\'appli</string>
    <string name="soutiens_effectif">merci de soutemir l\'appli</string>
    <string name="redirection">vous serez rediriger a l\'acceuil dans quelques seconde</string>
    <string name="decouvrir">Decouvrir</string>
    <string name="T_shirts">T_shirts</string>
    <string name="Pulls">Pulls</string>
    <string name="jupes">jupes</string>
    <string name="chaussures">chaussures</string>
    <string name="pantalons">pantalons</string>
    <string name="cullotes">cullotes</string>
    <string name="chemises">chemises</string>
    <string name="robes">robes</string>
    <string name="accessoire">accessoire</string>
    <string name="location">location</string>
    <string name="enregister">m\'enregistrer</string>
    <string name="actu">ACTUELLEMENT</string>
    <string name="profil_drawer">profil</string>
    <string name="message_drawer">message</string>
    <string name="parametre_draw">parametre</string>
    <string name="publicite_drawer">publicite</string>
    <string name="acceuil">Acceuil</string>
    <string name="pas_de_message">aucune conversation</string>
    <string name="client_id">537391119843-njqfai8ka55g6doo947bnklqcap3ih8c.apps.googleusercontent.com</string>
    <string-array name="countries" id="@+id/countries">
        <item>Residence</item>
        <item>Douala</item>
        <item>Yaounde</item>
        <item>Bamenda</item>
        <item>Baffousam</item>
        <item>Ngaoundéré</item>
        <item>Bertoua</item>
        <item>Ebolowa</item>
        <item>Buéa</item>
        <item>Maroua</item>
    </string-array>
    <string name="title_activity_test_detail">TestDetailActivity</string>
</resources>