<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc"
    tools:context=".postActivity.PostActivityFinal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/final_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_list"
        android:theme="@style/ToolbarThemeTwo"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/post_info_sur_vente"
        app:titleTextColor="@color/blanc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_toolbar"
        app:layout_constraintVertical_bias="0.125">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageProduit"
                android:layout_width="0dp"
                android:layout_height="@dimen/app_bar_height"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/noir"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/post_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.5"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:hint="@string/produc_name"
                android:inputType="textPersonName"
                android:maxLength="35"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/parametre_text_size"
                android:theme="@style/edit_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/post_product_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.5"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:hint="@string/post_description"
                android:inputType="textMultiLine"
                android:maxLength="400"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/parametre_text_size"
                android:theme="@style/edit_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_product_name" />

            <EditText
                android:id="@+id/post_production_prix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.5"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:hint="@string/post_prix"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/parametre_text_size"
                android:theme="@style/edit_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_product_description"
                tools:ignore="LabelFor" />

            <Spinner
                android:id="@+id/mode_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/mode_list"
                android:padding="15dp"
                android:spinnerMode="dropdown"
                android:theme="@style/edit_theme"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />

            <Spinner
                android:id="@+id/phone_tablet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/phone_tablet"
                android:padding="15dp"
                android:spinnerMode="dropdown"
                android:theme="@style/edit_theme"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />

            <Spinner
                android:id="@+id/electronique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/electronique"
                android:padding="15dp"
                android:spinnerMode="dropdown"
                android:theme="@style/edit_theme"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />

            <Spinner
                android:id="@+id/informatique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/informatique"
                android:padding="15dp"
                android:spinnerMode="dropdown"
                android:theme="@style/edit_theme"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />

            <Spinner
                android:id="@+id/beaute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/beaute"
                android:padding="15dp"
                android:spinnerMode="dropdown"
                android:theme="@style/edit_theme"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />
            <Spinner
                android:id="@+id/jeux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/jeux"
                android:padding="15dp"
                android:spinnerMode="dropdown"
                android:theme="@style/edit_theme"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_production_prix" />


            <ProgressBar
                android:id="@+id/progressBar_post"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/imageProduit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageProduit" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/post_new_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/post_actibity_final_float_button_top_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="@dimen/post_padding_button_bottom"
                android:clickable="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageProduit"
                app:layout_constraintVertical_bias="0.361"
                app:srcCompat="@drawable/ic_ajouter" />

            <Button
                android:id="@+id/post_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/new_button_add_button_end"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/new_button_add_button_end"
                android:background="@drawable/main_background"
                android:text="mettre en vendre"
                android:textAllCaps="false"
                android:textColor="@color/blanc"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_list" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/text_choice_widht"
                android:layout_height="17dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/righteous"
                android:text=" remplir toutes les informations"
                android:textAlignment="center"
                android:textSize="@dimen/new_detail_desc_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageProduit" />

            <TextView
                android:layout_width="@dimen/text_choice_widht"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="70dp"
                android:fontFamily="@font/righteous"
                android:text="nb : toutes publications dans la mauvaise categorie , sera supprimé"
                android:textAlignment="center"
                android:textSize="@dimen/new_detail_desc_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_button" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>